# botofgreed-rs

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh
scripts/: build.sh  watch.sh
src/: config.rs  handler.rs  log.rs  main.rs  prelude.rs
src/command/: greed.rs  info.rs  interactor.rs  memedex.rs  mod.rs  op.rs
src/index/: meme.rs  mod.rs
