[package]
name = "botofgreed-rs"
version = "2.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"

log = "0.4"
log4rs = "1.1"
owo-colors = "3"

lazy_static = "1"
once_cell = "1"

rand = "0.8"

serde = "1"
serde_json = "1"
serde_repr = "0.1.9"
url = "2"
chrono = { version = "0.4.22", features = ["serde"] }
humantime = "2.1.0"

serenity = { version = "*", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "simd_json",
], git = "https://github.com/serenity-rs/serenity", branch = "next" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

snmalloc-rs = { version = "0.3", features = ["native-cpu"] }

[features]
default = []
logging = []
